# asyncplusplus

./: .gitignore  CMakeLists.txt
include/: async++.h  asyncxx.h
include/async++/: aligned_alloc.h  cancel.h  continuation_vector.h  parallel_for.h  parallel_invoke.h  parallel_reduce.h  partitioner.h  ref_count.h  scheduler.h  scheduler_fwd.h  task.h  task_base.h  traits.h  when_all_any.h
include/asyncxx/: aligned_alloc.h
src/: fifo_queue.h  internal.h  scheduler.cpp  singleton.h  task_wait_event.h  threadpool_scheduler.cpp  work_steal_queue.h
test/: CMakeLists.txt  test_aligned_alloc.cpp
test/UnitTests/: main.cpp  test_aligned_alloc.cpp
test/test/: test_aligned_alloc.cpp
